Fix qualification section tab alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -584,7 +584,7 @@ img {
 
 .qualification__data {
     display: grid;
-    grid-template-columns: 1fr max-content 1fr;
+    grid-template-columns: calc(50% - 7px) 14px calc(50% - 7px);
 }
 
 .qualification__title {
